feat: modal, fix: tokenization v1